# boon

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-cli.yml  release-parser.yml  release-python.yml
crates/boon/: Cargo.toml  README.md
crates/boon-cli/: Cargo.toml
crates/boon-cli/benches/: cli.rs
crates/boon-cli/src/: main.rs
crates/boon-cli/src/commands/: abilities.rs  ability_ticks.rs  ability_upgrades.rs  active_modifiers.rs  boss_kills.rs  chat.rs  classes.rs  entities.rs  events.rs  info.rs  messages.rs  mid_boss.rs  mod.rs  neutrals.rs  objectives.rs  send_tables.rs  shop_events.rs  stat_modifiers.rs  string_tables.rs  summary.rs  troopers.rs  verify.rs
crates/boon-proto/: Cargo.toml  README.md
crates/boon-proto/proto/: allowlist.txt  manifest.txt
crates/boon-proto/src/: lib.rs  proto.rs
crates/boon-python/: Cargo.toml  README.md  pyproject.toml
crates/boon-python/docs/: Makefile  api.md  changelog.md  cli.md  conf.py  examples.md  faq.md  getting-started.md  index.md  known-issues.md  requirements.txt  roadmap.md
crates/boon-python/docs/internals/: class-info.md  entities.md  file-structure.md  index.md  messages.md  name-tables.md  parsing-flow.md  serializers.md  string-tables.md
crates/boon-python/docs/reference/: entity-classes.md  heroes.md  index.md  teams.md
crates/boon-python/python/boon/: __init__.py  __init__.pyi  errors.py  stats.py
crates/boon-python/src/: lib.rs
crates/boon-python/tests/: conftest.py  test_68359505.py  test_68611977.py  test_70537442.py  test_70555151.py  test_demo.py  test_stats.py
crates/boon/benches/: parse.rs
crates/boon/examples/: entities.rs  events.rs  info.rs  player_ticks.rs  profile_decode.rs
crates/boon/src/: abilities.rs  error.rs  game_modes.rs  heroes.rs  hitgroups.rs  lib.rs  lifestates.rs  modifiers.rs  patron_phases.rs  position.rs  reader.rs  teams.rs
crates/boon/src/demo/: command.rs  decode.rs  mod.rs  parser.rs
crates/boon/src/entity/: class_info.rs  entities.rs  field_decoder.rs  field_path.rs  field_value.rs  mod.rs  quantized_float.rs  serializers.rs  string_tables.rs
crates/boon/src/io/: bitreader.rs  mod.rs  reader.rs
crates/boon/src/parser/: core.rs  error.rs  mod.rs  sendtables.rs  stringtables.rs
crates/boon/src/reader/: bytes.rs  error.rs  mod.rs
crates/boon/src/string_table/: mod.rs  parse.rs  print.rs  schema.rs  types.rs  update.rs
scripts/: check-msrv.sh  sync-name-tables.sh  sync-protos.sh
scripts/build-protos/: Cargo.toml  build-protos.rs
scripts/compute-abilities-hash-table/: Cargo.toml  main.rs
scripts/generate-name-tables/: Cargo.toml  main.rs
