[package]
name = "boon-proto"
# boon-proto is versioned independently from the workspace release version. The
# PATCH is the game's monotonic SourceRevision and the +ServerVersion suffix
# records the game build (ClientVersion has always equalled ServerVersion), so
# every proto sync yields a higher, publishable version. MAJOR.MINOR is the
# compatibility epoch (bump it for breaking changes to this crate's API).
# scripts/sync-protos.sh refreshes this on each sync.
version = "0.2.10717574+6557"
rust-version.workspace = true
edition = "2024"
description = "Protobuf definitions for Deadlock demo files"
license = "MIT"
repository = "https://github.com/pnxenopoulos/boon"
authors = ["Peter Xenopoulos"]
keywords = ["deadlock", "protobuf", "demo"]
categories = ["game-development", "encoding"]

[dependencies]
bytes = "1.11"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0.228", features = ["derive"] }


