[package]
name = "boon-python"
version = "0.0.0"
edition = "2024"

[lib]
name = "_boon"
crate-type = ["cdylib"]

[dependencies]
boon_parser = { path = "../boon", package = "boon-deadlock" }
boon-proto = { workspace = true }
prost = "0.14"
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-polars = "0.20"
polars = "0.46"
