[package]
name = "boon-python"
version = "0.1.0"
rust-version.workspace = true
edition = "2024"
license = "MIT"

[lib]
name = "_boon"
crate-type = ["cdylib"]

[dependencies]
boon_parser = { path = "../boon", package = "boon-deadlock" }
boon-proto = { workspace = true }
prost = "0.14"
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-polars = "0.26"
polars = "0.53"
