[project]
name = "boon"
version = "0.0.0"
description = "Boon is a powerful Deadlock demo / replay file parser."
requires-python = ">=3.11"
license = "MIT"
dependencies = ["polars>=1.0"]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
]
docs = [
    "myst-parser>=5.0.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx>=9.0.4",
    "sphinx-rtd-dark-mode>=1.3.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "boon._boon"
python-source = "python"
