[project]
name = "boon-deadlock"
description = "Boon is a powerful Deadlock demo / replay file parser."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dynamic = ["version"]
keywords = ["deadlock", "demo", "parser", "replay"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["polars>=1.0"]

[project.urls]
Homepage = "https://github.com/pnxenopoulos/boon"
Documentation = "https://boon.readthedocs.io"
Repository = "https://github.com/pnxenopoulos/boon"
Discord = "https://discord.gg/tWCwmHDy2u"
Issues = "https://github.com/pnxenopoulos/boon/issues"

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8.0",
]
docs = [
    "myst-parser>=5.0.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx>=9.0.4",
    "sphinx-rtd-dark-mode>=1.3.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "boon._boon"
python-source = "python"
