[package]
name = "boon-deadlock"
version = "0.0.0"
edition = "2024"
description = "Boon is a Deadlock demo / replay file parser"

[dependencies]
anyhow = "1.0"
bitter = "0.8"
bytes = "1.11"
prost = "0.14"
snap = "1.1.1"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }

boon-proto = { workspace = true }

[profile.dev]
opt-level = 1

[lib]
name = "boon"
path = "src/lib.rs"
