[package]
name = "boon-deadlock"
version = "0.0.0"
edition = "2024"
description = "Boon is a Deadlock demo / replay file parser"

[dependencies]
anyhow = "1.0"
memmap2 = "0.9"
prost = "0.14"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snap = "1.1"
thiserror = "2.0"

boon-proto = { workspace = true }

[profile.dev]
opt-level = 1

[lib]
name = "boon"
path = "src/lib.rs"
